testsuite/tests/properties/invalid_set/two_type_params/test.lkt
from common import FooNode

class Example: FooNode {
    @external() fun test(): Set[Int, Bool]
}

